[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "chatrix-bot"
version = "1.0.0"
description = "Telegram dating bot"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^20.7"
flask = "^2.3.3"
psycopg2-binary = "^2.9.7"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
start = "main:app"